# pacmap

./: .claude.md  .gitignore  CMakeLists.txt  README.md  build.bat
src/: bindings.cpp  enemy.cpp  enemy.h  game.cpp  game.h  map.cpp  map.h  player.cpp  player.h
web/: index.html  pacmap.js  pacmap.wasm  style.css
